--- a/usurvey/.eslintrc.json
+++ b/usurvey/.eslintrc.json
@@ -26,6 +26,7 @@
         "react/jsx-filename-extension": 0,
         "react/jsx-indent": 0,
         "react/jsx-uses-vars": 1,
+        "react/no-unescaped-entities": 0,
         "react/prop-types": 0,
         "react/prefer-stateless-function": 0,
         "semi": 0,
