--- a/usurvey/.eslintrc.json
+++ b/usurvey/.eslintrc.json
@@ -5,6 +5,7 @@
           2,
           "single"
       ],
+
       "arrow-body-style": 0,
         "arrow-parens": 0,
         "camelcase": 0,
@@ -26,6 +27,7 @@
         "react/jsx-filename-extension": 0,
         "react/jsx-indent": 0,
         "react/jsx-uses-vars": 1,
+        "react/no-string-refs": 0,
         "react/no-unescaped-entities": 0,
         "react/prop-types": 0,
         "react/prefer-stateless-function": 0,
