--- a/calculator/.eslintrc.json
+++ b/calculator/.eslintrc.json
@@ -6,6 +6,7 @@
           "single"
       ],
       "arrow-body-style": 0,
+      "react/no-multi-comp": 0,
       "max-len": 0,
         "arrow-parens": 0,
         "no-unused-vars": 0,
