--- a/intragram-clone/.eslintrc.json
+++ b/intragram-clone/.eslintrc.json
@@ -17,6 +17,7 @@
       "no-underscore-dangle": 0,
       "no-irregular-whitespace": 0,
       "react/forbid-prop-types": 0,
+      "react/no-string-refs": 0,
         "arrow-parens": 0,
         "no-unused-vars": 0,
         "no-console": 0,
