--- a/react-calendar/.eslintrc.json
+++ b/react-calendar/.eslintrc.json
@@ -5,6 +5,11 @@
             2,
             "single"
         ],
+            "no-plusplus": 0,
+            "function-paren-newline": 0,
+            "jsx-a11y/click-events-have-key-events": 0,
+            "jsx-a11y/no-static-element-interactions": 0,
+            "no-nested-ternary": 0,
         "arrow-body-style": 0,
         "max-len": 0,
         "arrow-parens": 0,
