Added RecipeList component to display recipe list cnotained in the store.

--- a/recipe-finder/.eslintrc.json
+++ b/recipe-finder/.eslintrc.json
@@ -8,6 +8,7 @@
             "single"
         ],
         "arrow-body-style": 0,
+        "react/no-array-index-key": 0,
         "max-len": 0,
         "arrow-parens": 0,
         "no-unused-vars": 0,
