--- a/recipe-finder/.eslintrc.json
+++ b/recipe-finder/.eslintrc.json
@@ -7,6 +7,7 @@
             2,
             "single"
         ],
+        "no-nested-ternary": 0,
         "arrow-body-style": 0,
         "react/no-array-index-key": 0,
         "max-len": 0,
