--- a/meme-generator/.eslintrc.json
+++ b/meme-generator/.eslintrc.json
@@ -7,6 +7,7 @@
             2,
             "single"
         ],
+        "import/prefer-default-export": 0,
         "react/jsx-one-expression-per-line": 0,
         "implicit-arrow-linebreak": 0,
         "arrow-body-style": 0,
