--- a/meme-generator/.eslintrc.json
+++ b/meme-generator/.eslintrc.json
@@ -7,6 +7,11 @@
             2,
             "single"
         ],
+        "react/no-access-state-in-setstate": 0,
+        "jsx-a11y/no-static-element-interactions": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "react/no-array-index-key": 0,
+        "react/destructuring-assignment": 0,
         "func-names": 0,
         "import/prefer-default-export": 0,
         "react/jsx-one-expression-per-line": 0,
