--- a/meme-generator/.eslintrc.json
+++ b/meme-generator/.eslintrc.json
@@ -7,6 +7,7 @@
             2,
             "single"
         ],
+        "no-param-reassign": 0,
         "object-curly-newline": 0,
         "react/no-access-state-in-setstate": 0,
         "jsx-a11y/no-static-element-interactions": 0,
