--- a/meme-generator/.eslintrc.json
+++ b/meme-generator/.eslintrc.json
@@ -7,6 +7,8 @@
             2,
             "single"
         ],
+        "dot-notation": 0,
+        "prefer-template": 0,
         "no-param-reassign": 0,
         "object-curly-newline": 0,
         "react/no-access-state-in-setstate": 0,
